# XjdmgAndZrdft

./: .vscode.tar.xz  CMakeLists.txt  README.md  main.cpp
include/: NaiveBayes.h  base.h  knn.h  perceptron.h
src/: NaiveBayes.cpp  base.cpp  knn.cpp  main.cpp  perceptron.cpp
